--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.2.8+4
   intl: ^0.18.1
   table_calendar: ^3.0.9
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
