--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.18.1
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.0
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
