--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.1+1
 
 environment:
   sdk: '>=3.0.0'
@@ -45,6 +45,7 @@ dependencies:
   fl_chart: ^0.63.0
   flutter_markdown: ^0.6.17
   url_launcher: ^6.1.12
+  package_info_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
