--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_markdown: ^0.6.17
   url_launcher: ^6.1.12
   package_info_plus: ^4.0.2
+  permission_handler: ^10.4.3
+  path_provider: ^2.0.15
+  csv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
