--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   permission_handler: ^10.4.3
   path_provider: ^2.0.15
   csv: ^5.0.2
+  media_store_plus: ^0.0.7
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
