--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+1
+version: 1.3.0+1
 
 environment:
   sdk: '>=3.0.0'
@@ -50,6 +50,7 @@ dependencies:
   csv: ^5.0.2
   media_store_plus: ^0.0.7
   url_launcher: ^6.1.12
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
