QOL fix in charts, settings menu changed for play store release

--- a/android/app/src/profile/AndroidManifest.xml
+++ b/android/app/src/profile/AndroidManifest.xml
@@ -11,5 +11,9 @@
             <action android:name="android.intent.action.VIEW" />
             <data android:scheme="https" android:host="github.com" android:path="/EpicNicks/SimpleCalorieCounter/releases/latest" />
         </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" android:host="ko-fi.com" android:path="/epicnicks" />
+        </intent>
     </queries>
 </manifest>
