--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.4.2+1
+version: 1.4.3+1
 
 environment:
   sdk: '>=3.0.0'
@@ -82,7 +82,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/github-mark.png
+    - assets/kofi-banner.png
+     # - assets/github-mark.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
