--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   math_expressions: ^2.4.0
   google_fonts: ^4.0.4
   sqflite: ^2.2.8+4
-  intl: ^0.18.1
+  intl: 0.18.0
+  flutter_localizations:
+    sdk: flutter
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.0
   fl_chart: ^0.63.0
@@ -74,7 +76,7 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
