--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,21 +36,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.4
+  google_fonts: 6.1.0
   sqflite: ^2.2.8+4
-  intl: 0.18.1
+  intl: 0.20.2
   flutter_localizations:
     sdk: flutter
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.0
-  fl_chart: ^0.63.0
+  fl_chart: ^1.0.0
   flutter_markdown: ^0.6.17
-  package_info_plus: ^4.0.2
-  permission_handler: ^10.4.3
+  package_info_plus: ^5.0.1
+  permission_handler: ^11.3.1
   path_provider: ^2.0.15
-  csv: ^5.0.2
+  csv: ^6.0.0
   url_launcher: ^6.1.12
-  file_picker: ^5.3.2
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
