--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: 6.1.0
+  google_fonts: ^6.2.1
   sqflite: ^2.2.8+4
   intl: 0.20.2
   flutter_localizations:
@@ -44,18 +44,18 @@ dependencies:
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.0
   fl_chart: ^1.0.0
-  flutter_markdown: ^0.6.17
-  package_info_plus: ^5.0.1
-  permission_handler: ^11.3.1
+  flutter_markdown: ^0.7.7+1
+  package_info_plus: ^8.3.0
+  permission_handler: ^12.0.0+1
   path_provider: ^2.0.15
   csv: ^6.0.0
   url_launcher: ^6.1.12
-  file_picker: ^8.0.0+1
+  file_picker: ^10.1.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.3
 
 flutter_icons:
   android: true
@@ -70,6 +70,9 @@ flutter_icons:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+dependency_overrides:
+  win32: ^5.1.1
+  ffi: ^2.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
